Bug 76384 - [BYT Regression]many gem_partial_pwrite_pread and gem_pwrite_pread subcases don't exit testing
Summary: [BYT Regression]many gem_partial_pwrite_pread and gem_pwrite_pread subcases d...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Antti Koskipaa
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-20 06:52 UTC by lu hua
Modified: 2017-10-06 14:39 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (125.95 KB, text/plain)
2014-03-20 06:52 UTC, lu hua
no flags Details

Description lu hua 2014-03-20 06:52:07 UTC
Created attachment 96082 [details]
dmesg

System Environment:
--------------------------
Platform: Baytrail
Kernel: (drm-intel-nightly)d6fb8438c5f136231283d7978505754f8f6f7d5f

Bug detailed description:
------------------------- 
Some gem_partial_pwrite_pread doesn't exit testing on Baytrail with -queued and -nightly kernel.

The latest known good commit: 484b41dd70a9fbea894632d8926bbb93f05021c7
The latest known bad commit: a25ca17c1eac80c5547620ef5e6c14f5ef435297

run ./gem_partial_pwrite_pread --run-subtest write
output:
IGT-Version: 1.6-g10571b8 (x86_64) (Linux: 3.14.0-rc7_drm-intel-nightly_d6fb84_20140319+ x86_64)
checking partial writes
partial writes test: 100%
Subtest write: SUCCESS

Reproduce steps:
-------------------------
1. ./gem_partial_pwrite_pread --run-subtest write
Comment 1 Chris Wilson 2014-03-20 07:42:44 UTC
Please find the line corresponding to i915_gem_object_set_cache_level+0x75

(You can use gdb /path/to/i915.ko; list *i915_gem_object_set_cache_level+0x75)
Comment 2 Chris Wilson 2014-03-21 08:20:16 UTC
*** Bug 76430 has been marked as a duplicate of this bug. ***
Comment 3 lu hua 2014-03-24 06:34:11 UTC
It works well on latest -nightly kernel and igt. Close it.
IGT-Version: 1.6-g7a81094 (x86_64) (Linux: 3.14.0-rc7_drm-intel-nightly_ef4aa4_20140323+ x86_64)
checking partial reads
partial reads test: 100%
Subtest reads: SUCCESS
checking partial writes
partial writes test: 100%
Subtest write: SUCCESS
checking partial writes after partial reads
partial read/writes test: 100%
Subtest writes-after-reads: SUCCESS
checking partial reads
partial reads test: 100%
Subtest reads-uncached: SUCCESS
checking partial writes
partial writes test: 100%
Subtest write-uncached: SUCCESS
checking partial writes after partial reads
partial read/writes test: 100%
Subtest writes-after-reads-uncached: SUCCESS
checking partial reads
partial reads test: 100%
Subtest reads-snoop: SUCCESS
checking partial writes
partial writes test: 100%
Subtest write-snoop: SUCCESS
checking partial writes after partial reads
partial read/writes test: 100%
Subtest writes-after-reads-snoop: SUCCESS
checking partial reads
partial reads test: 100%
Subtest reads-display: SUCCESS
checking partial writes
partial writes test: 100%
Subtest write-display: SUCCESS
checking partial writes after partial reads
partial read/writes test: 100%
Subtest writes-after-reads-display: SUCCESS
Comment 4 lu hua 2014-03-24 06:43:59 UTC
Verified.Fixed.
Comment 5 Elizabeth 2017-10-06 14:39:13 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.